--- a/Signup.html
+++ b/Signup.html
@@ -32,7 +32,7 @@
          <label for="" class="check-label">Agree <a href="#">Terms & Conditons</a></label>
         </div>
         <button>Sign Up</button>
-        <p>Already have an account?<a href="login.html"> Login here</a></p>
+        <p>Already have an account?<a href="index.html"> Login here</a></p>
         
       </div>
       <div class="rightside">
